objects/Policy_Certificate_Account_Role__c/Policy_Certificate_Account_Role__c.object-meta.xml
<CustomObject>
    <label>Policy Certificate Account Role</label>
    <nameField>
        <displayFormat>PCA-{0000}</displayFormat>
        <label>Policy Certificate Account Role Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Policy Certificate Account Roles</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>