objects/Policy_Certificate_Account_Role__c/fields/Policy__c.field-meta.xml
<CustomField>
    <fullName>Policy__c</fullName>
    <label>Policy</label>
    <referenceTo>Policy_Reference__c</referenceTo>
    <relationshipLabel>Policy Certificate Account Roles</relationshipLabel>
    <relationshipName>Policy_Certificate_Account_Roles</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>