objects/Policy_Certificate_Account_Role__c/fields/Policy_Certificate__c.field-meta.xml
<CustomField>
    <fullName>Policy_Certificate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Policy Certificate</label>
    <referenceTo>Policy_Certificate__c</referenceTo>
    <relationshipLabel>Policy Certificate Account Roles</relationshipLabel>
    <relationshipName>Policy_Certificate_Account_Roles</relationshipName>
    <type>Lookup</type>
</CustomField>