objects/Policy_Certificate_Account_Role__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Beneficiary</fullName>
            </value>
            <value>
                <fullName>Portofolio Owner</fullName>
            </value>
            <value>
                <fullName>Policyowner</fullName>
            </value>
            <value>
                <fullName>Joint Owner</fullName>
            </value>
            <value>
                <fullName>Certifcate Holder</fullName>
            </value>
            <value>
                <fullName>Agent</fullName>
            </value>
            <value>
                <fullName>Insurer</fullName>
            </value>
            <value>
                <fullName>Basic Insured</fullName>
            </value>
            <value>
                <fullName>Other Insured</fullName>
            </value>
            <value>
                <fullName>Payor</fullName>
            </value>
            <value>
                <fullName>Trustee</fullName>
            </value>
            <value>
                <fullName>Policy For</fullName>
            </value>
            <value>
                <fullName>Dependent</fullName>
            </value>
            <value>
                <fullName>Claiment</fullName>
            </value>
            <value>
                <fullName>Controlling Person</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>