objects/Policy_Certificate_Account_Role__c/fields/Role_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Role_Percentage__c</fullName>
    <label>Role Percentage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>